--- a/src/_includes/article.njk
+++ b/src/_includes/article.njk
@@ -1,4 +1,4 @@
-{% set absUrl = 'https://santhimultispecialityhospital.com' %}
+{% set absUrl = 'https://santhiclone.pages.dev' %}
 
 <!DOCTYPE html>
 <html lang="en">
