--- a/src/doctors.njk
+++ b/src/doctors.njk
@@ -22,12 +22,12 @@
      <meta property="og:site_name" content="Santhi Multispeciality Hospital">
      <meta name="twitter:title" content="Santhi Multispeciality Hospital - Best Multi-Speciality Hospital in Anantapur">
      <meta name="twitter:description" content="Providing expert healthcare services in Anantapur. Contact us at 8554233393. Visit our hospital near RTC Bus Stand, 80 Feet Road.">
-     <link rel="canonical" href="https://santhimultispecialityhospital.com/doctors">
-<meta property="og:url" content="https://santhimultispecialityhospital.com/doctors">
-<meta property="og:image" content="https://santhimultispecialityhospital.com/images/favicon.webp">
+     <link rel="canonical" href="https://santhiclone.pages.dev/doctors">
+<meta property="og:url" content="https://santhiclone.pages.dev/doctors">
+<meta property="og:image" content="https://santhiclone.pages.dev/images/favicon.webp">
 <meta property="og:locale" content="en_IN">
 <meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:image" content="https://santhimultispecialityhospital.com/images/favicon.webp">
+<meta name="twitter:image" content="https://santhiclone.pages.dev/images/favicon.webp">
 
 
 
@@ -109,8 +109,8 @@
             {
               "@type": "MedicalOrganization",
               "name": "Santi Multi Speciality Hospital",
-              "url": "https://santhimultispecialityhospital.com/doctors",
-              "@id": "https://santhimultispecialityhospital.com/doctors",
+              "url": "https://santhiclone.pages.dev/doctors",
+              "@id": "https://santhiclone.pages.dev/doctors",
               "address": {
                 "@type": "PostalAddress",
                 "streetAddress": "D.No 13-3-380, Near RTC Bus Stand, 80 Feet Road",
