--- a/src/review.njk
+++ b/src/review.njk
@@ -108,7 +108,7 @@
       if (selectedRating >= 4) {
         window.location.href = 'https://search.google.com/local/writereview?placeid=ChIJ1_WRydBKsTsRbO1HVnNg5FQ';
       } else {
-        window.location.href = 'https://santhimultispecialityhospital.com/privatefeedback';
+        window.location.href = 'https://santhiclone.pages.dev/privatefeedback';
       }
     }
   </script>
